name:               step-scheme
version:            0.1.0.0
synopsis:           Step-by-Step Scheme Evaluator
description:        Visualize Scheme expression evaluation by printing each
                    step of evaluation.
license:            MIT
license-file:       LICENSE
author:             Taimoor Zaeem
maintainer:         Taimoor Zaeem <mtaimoorzaeem@gmail.com>
category:           Educational, Interpreter
homepage:           https://github.com/taimoorzaeem/step-scheme
bug-reports:        https://github.com/taimoorzaeem/step-scheme/issues
build-type:         Simple
extra-doc-files:    README.md
cabal-version:      1.18

tested-with:
    GHC == 9.4.8
  , GHC == 9.6.6
  , GHC == 9.8.4
  , GHC == 9.10.1
  , GHC == 9.12.2

source-repository head
  type: git
  location: https://github.com/taimoorzaeem/step-scheme

executable step-scheme
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
  hs-source-dirs:     main
  main-is:            Main.hs
  build-depends:      base                      >= 4.9 && < 4.22
                    , step-scheme

  ghc-options:        -Werror -Wall -Wunused-packages

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
  hs-source-dirs:     src
  exposed-modules:    Language.Scheme.StepScheme
  build-depends:      base                      >= 4.9 && < 4.22
                    , parsec                    >= 3.1.11 && < 3.2

  ghc-options:        -Werror -Wall -Wunused-packages

test-suite spec
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
  hs-source-dirs:     test/spec
  main-is:            Main.hs
  other-modules:      StepSchemeSpec
  build-depends:      base                      >= 4.9 && < 4.22
                    , step-scheme
                    , hspec                     >= 2.3 && < 2.12
                    , parsec                    >= 3.1.11 && < 3.2

  ghc-options:        -Werror -Wall -Wunused-packages
